tests/lean/emptyc_errors.lean.expected.out
emptyc_errors.lean:4:52: error: don't know how to synthesize placeholder
context:
A : Type u,
x : A
⊢ has_mem A ?m_1
emptyc_errors.lean:4:54: error: don't know how to synthesize placeholder
context:
A : Type u,
x : A
⊢ Type ?
